index html new title

--- a/birdy-client/public/index.html
+++ b/birdy-client/public/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins" />
     <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
-    <title>React App</title>
+    <title>Birdy</title>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
